force-app/main/default/objects/Account/fields/AIMAR__c.field-meta.xml
<CustomField>
    <fullName>AIMAR__c</fullName>
    <label>AIMAR</label>
    <length>100</length>
    <type>Text</type>
</CustomField>