force-app/main/default/objects/Account/fields/AIMAR_TEST__c.field-meta.xml
<CustomField>
    <fullName>AIMAR_TEST__c</fullName>
    <label>AIMAR_TEST</label>
    <length>100</length>
    <type>Text</type>
</CustomField>