force-app/main/default/objects/Account/fields/NAMA__c.field-meta.xml
<CustomField>
    <fullName>NAMA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NAMA</label>
    <type>Checkbox</type>
</CustomField>